--- a/wordpress/docker-compose.yml
+++ b/wordpress/docker-compose.yml
@@ -1,51 +1,53 @@
 version: '3'
-
+networks:
+  mynetwork:
+    name: mynetwork
 services:
   db:
     image: mysql:8.0
-    container_name: db
-    restart: unless-stopped
-    env_file: .env
+    container_name: db_server
+    restart: always
+    command: mysqld --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
     environment:
-      - MYSQL_DATABASE=wordpress
-    volumes: 
-      - dbdata:/var/lib/mysql
-    command: '--default-authentication-plugin=mysql_native_password'
-    networks:
-      - app-network
-  wordpress:
-    depends_on: 
-      - db
-    image: wordpress:5.1.1-fpm-alpine
-    container_name: wordpress
-    restart: unless-stopped
-    env_file: .env
-    environment:
-      - WORDPRESS_DB_HOST=db:3306
-      - WORDPRESS_DB_USER=$MYSQL_USER
-      - WORDPRESS_DB_PASSWORD=$MYSQL_PASSWORD
-      - WORDPRESS_DB_NAME=wordpress
+      MYSQL_ROOT_PASSWORD: rootasdf1234
+      # MYSQL_DATABASE: db_site1
     volumes:
-      - wordpress:/var/www/html
+      - db_data:/var/lib/mysql
+      - ./docker/provision/mysql/init:/docker-entrypoint-initdb.d
     networks:
-      - app-network
-  webserver:
-    depends_on:
-      - wordpress
-    image: nginx:1.15.12-alpine
-    container_name: webserver
-    restart: unless-stopped
-    ports:
-      - "80:80"
-    volumes:
-      - wordpress:/var/www/html
-      - ./nginx-conf:/etc/nginx/conf.d
-    networks:
-      - app-network
-volumes:
-  wordpress:
-  dbdata:
+      - mynetwork
 
-networks:
-  app-network:
-    driver: bridge
+  wordpress_mainsite:
+    depends_on:
+      - db
+    image: wordpress:latest
+    container_name: wp_main_site
+    restart: always
+    ports:
+      - "8080:80"
+    environment:
+      WORDPRESS_DB_HOST: db:3306
+      WORDPRESS_DB_USER: root
+      WORDPRESS_DB_PASSWORD: rootasdf1234
+      WORDPRESS_DB_NAME: db_site1
+    volumes:
+      - ./wordpress_main_data/wp-content:/var/www/html/wp-content
+    networks:
+      - mynetwork
+  phpmyadmin:
+    depends_on:
+      - db
+    image: phpmyadmin/phpmyadmin:latest
+    container_name: phpmyadmin_mainsite
+    restart: always
+    ports:
+      - 8082:80
+    environment:
+      PMA_HOST: db
+      MYSQL_ROOT_PASSWORD: rootasdf1234
+    networks:
+      - mynetwork
+
+volumes:
+  db_data:
+  wordpress_main_data:
