--- a/wordpress/docker-compose.yml
+++ b/wordpress/docker-compose.yml
@@ -7,13 +7,11 @@ services:
     image: mysql:8.0
     container_name: db_server
     restart: always
-    command: mysqld --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
     environment:
       MYSQL_ROOT_PASSWORD: rootasdf1234
-      # MYSQL_DATABASE: db_site1
+      MYSQL_DATABASE: db_site1
     volumes:
       - db_data:/var/lib/mysql
-      - ./docker/provision/mysql/init:/docker-entrypoint-initdb.d
     networks:
       - mynetwork
 
